# docs/thv-registry-api/swagger.yaml
@@ -161,6 +161,11 @@ components:
           example: v0.1.0
           type: string
       type: object
+    internal_api_v1.publishEntryRequest:
+      properties:
+        server:
+          $ref: '#/components/schemas/v0.ServerJSON'
+      type: object
     internal_api_v1.registryListResponse:
       properties:
         registries:
@@ -1138,16 +1143,44 @@ paths:
         content:
           application/json:
             schema:
-              type: object
+              oneOf:
+              - type: object
+              - $ref: '#/components/schemas/internal_api_v1.publishEntryRequest'
+                description: Entry to publish
+                summary: request
+        description: Entry to publish
+        required: true
       responses:
-        "501":
+        "201":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/v0.ServerJSON'
+          description: Published server
+        "400":
           content:
             application/json:
               schema:
                 additionalProperties:
                   type: string
                 type: object
-          description: Not implemented
+          description: Bad request
+        "409":
+          content:
+            application/json:
+              schema:
+                additionalProperties:
+                  type: string
+                type: object
+          description: Conflict
+        "500":
+          content:
+            application/json:
+              schema:
+                additionalProperties:
+                  type: string
+                type: object
+          description: Internal server error
       summary: Publish entry
       tags:
       - v1
@@ -1220,6 +1253,8 @@ paths:
             schema:
               type: object
       responses:
+        "204":
+          description: No Content
         "400":
           content:
             application/json:
@@ -1228,14 +1263,22 @@ paths:
                   type: string
                 type: object
           description: Bad request
-        "501":
+        "404":
           content:
             application/json:
               schema:
                 additionalProperties:
                   type: string
                 type: object
-          description: Not implemented
+          description: Not found
+        "500":
+          content:
+            application/json:
+              schema:
+                additionalProperties:
+                  type: string
+                type: object
+          description: Internal server error
       summary: Delete published entry
       tags:
       - v1
